adjusting menu icon for responsive circular menu

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             </a>
           </div>
           <div
+            id="hero-menu-container"
             class="col-5-md text-primary display-f align-center flex-column justify-space-between position-relative"
           >
             <div class="hero__image text-center">
