working on responsive toolbar

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <span class="nav__link-text">Skills</span>
                 </a>
               </li>
-              <li  class="nav__list">
+              <li  class="nav__list hide-for-mobile">
                 <a
                   class="nav__link"
                   href="#Testimonies"
