--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     <script defer src="dist/script.js"></script>
     <script defer src="dist/form.js"></script>
     <script defer src="dist/menu.js"></script>
+    <script defer src="dist/auto-type.js"></script>
+    <script defer src="dist/swiper.js"></script>
   </head>
 
   <body>
@@ -251,7 +253,7 @@
       </section>
       <!-- End of Hero Section -->
 
-      <!-- About Us Section -->
+      <!-- About Me Section -->
       <section id="About-me" class="container section text-dark-gray about-us">
         <h2 class="h2 mb-3 text-center text-black">
           <span class="header-underline">About Us</span>
@@ -308,9 +310,9 @@
       </section>
       <!-- End of About Us section -->
 
-      <!-- Services Section -->
+      <!-- Skills Section -->
       <section
-        id="services"
+        id="Skills"
         class="services container section text-center bg-light br pr-3 pl-3"
       >
         <h2 class="h2"><span class="header-underline">Services</span></h2>
@@ -405,7 +407,7 @@
       <!-- End of services Section -->
 
       <!-- Projects -->
-      <section id="projects" class="container section text-center">
+      <section id="Projects" class="container section text-center">
         <h2 class="h2"><span class="header-underline">Our Projects</span></h2>
         <p class="mt-2 mb-3">
           These are some of our top Projects around the world.
@@ -501,7 +503,7 @@
       <!-- End of project section -->
 
       <!-- Testimonials -->
-      <section id="testimonies" class="text-center mt-5 mb-5">
+      <section id="Testimonies" class="text-center mt-5 mb-5">
         <div class="testimonies container bg-light br section">
           <div class="pr-3 pl-3">
             <h2 class="h2">
@@ -741,8 +743,8 @@
       </section>
       <!-- End of Testimonials -->
 
-      <!-- Contact Us Section -->
-      <section id="contact-us" class="container contact-us section">
+      <!-- Contact Me Section -->
+      <section id="Contact-me" class="container contact-us section">
         <!-- Form toaster message -->
         <section id="toaster" class="toaster">
           <p>Thanks for being interested in working with us!</p>
@@ -902,7 +904,7 @@
     </main>
     <!-- End of Main Section -->
 
-    <!-- <footer class="footer bg-dark text-white pt-5 pb-5">
+    <footer class="footer bg-dark text-white pt-5 pb-5">
         <div class="container">
             <div class="row gap-3 justify-space-between footer__about">
 
@@ -968,6 +970,6 @@
             </div>
             <h4 class="h4 text-center fw-normal mt-5">COPYRIGHT &copy; WECONSTRUCT | 2023 | ALL RIGHTS RESERVED. </h4>
         </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
