working on projects section

--- a/index.html
+++ b/index.html
@@ -169,13 +169,20 @@
               <p>Bringing your website ideas to life.</p>
               <p><span id="auto-type" class="text-primary fw-700"></span></p>
             </div>
-            <div class="hero-cta">
-              <a
-              href="#contact-us"
-              class="btn display-i-b btn-primary h4 text-white mr-3"
-            >
-              Hire me
-            </a>
+            <div class="hero-cta"> 
+
+                <a
+                href="#About-me"
+                class="h4 text-white hero-cta__about">
+                <div  class="hero-cta__hire-icons">
+                  <div class="arrow"></div>
+                  <div class="arrow"></div>
+                  <div class="arrow"></div>
+                </div>
+                <span>About me</span>
+                
+              </a>
+
                <button class="btn-outline-primary text-white hide-for-medium">
                 <i class="fa-solid fa-file-arrow-down"></i>
                 Resume
@@ -285,6 +292,11 @@
              and I can adapt to whatever tools are required. Currently based in Alkhobar, Saudi Arabia 
              but I’m happy working remotely and have experience in remote teams. I’d love you to check out my works.
             </p>
+             <div  class="hero-cta__hire-icons">
+                  <div class="arrow"></div>
+                  <div class="arrow"></div>
+                  <div class="arrow"></div>
+                </div>
           </div>
         </div>
       </section>
@@ -293,65 +305,54 @@
       <!-- Projects Section -->
       <section
         id="Projects"
-        class="services container section text-center bg-light br pr-3 pl-3"
+        class="projects container section text-center bg-light br pr-3 pl-3"
       >
         <h2 class="h2 mb-4"><span class="header-underline">Projects</span></h2>
+
         <div class="cards row gap-3 justify-center">
-          <div class="card col-12-sm col-5-md  br p-3 service mb-2">
-            <div class="card__image service__image">
-              <i class="fa-solid fa-people-arrows"></i>
-              <span class="sr-only">people arrows icon</span>
-            </div>
-            <div class="card__body">
-              <h4 class="card__title mt-1 text-primary">Consulting</h4>
-              <p class="card__text">
-                Constructions are Lorem ipsum dolor sit amet, consectetur
-                adipiscin roads.
-              </p>
-            </div>
+          <div class="card col-12-sm col-5-md  br service mb-2">
+            <figure class="snip1200">
+              <img src="/assets/images/projects/we-construct.png" alt="sq-sample32" />
+              <figcaption >
+                <p>That's the difference between me and the rest of the world! Happiness isn't good enough for me! I demand euphoria! </p>
+                <div class="heading">
+                  <h2 class="text-primary">We <span>Construct</span></h2>
+                </div>
+              </figcaption>
+            </figure>
           </div>
-          <div class="card col-12-sm col-5-md  br p-3 service mb-2">
-            <div class="card__image service__image">
-              <i class="fa-solid fa-screwdriver-wrench"></i>
-              <span class="sr-only">screwdriver wrench icon</span>
-            </div>
-            <div class="card__body">
-              <h4 class="card__title mt-1 text-primary">Renovations</h4>
-              <p class="card__text">
-                Renovations are Lorem ipsum dolor sit amet, consectetur
-                adipiscin roads.
-              </p>
-            </div>
+          <div class="card col-12-sm col-5-md  br service mb-2">
+            <figure class="snip1200">
+              <img src="/assets/images/projects/search-country.jpg" alt="sq-sample32" />
+              <figcaption >
+                <p>That's the difference between me and the rest of the world! Happiness isn't good enough for me! I demand euphoria! </p>
+                <div class="heading">
+                  <h2 class="text-primary">Search Country App</h2>
+                </div>
+              </figcaption>
+            </figure>
           </div>
-
-          <div class="card col-12-sm col-5-md  br p-3 service mb-2">
-            <div class="card__image service__image">
-              <i class="fa-solid fa-compass-drafting"></i>
-              <span class="sr-only">compass drafting icon</span>
-            </div>
-            <div class="card__body">
-              <h4 class="card__title text-primary mt-1">
-                Architecture and Design
-              </h4>
-              <p class="card__text">
-                Architecure and Design are Lorem ipsum dolor sit amet,
-                consectetur adipiscin. roads
-              </p>
-            </div>
+          <div class="card col-12-sm col-5-md  br service mb-2">
+            <figure class="snip1200">
+              <img src="/assets/images/projects/invoice-app.jpg" alt="sq-sample32" />
+              <figcaption >
+                <p>That's the difference between me and the rest of the world! Happiness isn't good enough for me! I demand euphoria! </p>
+                <div class="heading">
+                  <h2 class="text-primary">We <span>Construct</span></h2>
+                </div>
+              </figcaption>
+            </figure>
           </div>
-
-          <div class="card col-12-sm col-5-md br p-3 service mb-2">
-            <div class="card__image service__image">
-              <i class="fa-sharp fa-solid fa-city"></i>
-              <span class="sr-only">City icon</span>
-            </div>
-            <div class="card__body">
-              <h4 class="card__title text-primary mt-1">Construction</h4>
-              <p class="card__text">
-                Construction are Lorem ipsum dolor sit amet, consectetur
-                adipiscin roads.
-              </p>
-            </div>
+          <div class="card col-12-sm col-5-md  br service mb-2">
+            <figure class="snip1200">
+              <img src="/assets/images/projects/barcode-finder.png" alt="sq-sample32" />
+              <figcaption >
+                <p>That's the difference between me and the rest of the world! Happiness isn't good enough for me! I demand euphoria! </p>
+                <div class="heading">
+                  <h2 class="text-primary">We <span>Construct</span></h2>
+                </div>
+              </figcaption>
+            </figure>
           </div>
         </div>
       </section>
